# quantum

./: .gitignore  CMakeLists.txt  readme.md
src/: main.c
src/Simulation/: Constants.c  Controlled_Gate.c  Gate.c  Input.c  Math.h  Measure.c  Simulation.h
src/examples/: bell_state.c  coin_flip.c  deutsch_jozsa.c
